--- a/source/main-chunk/head.html
+++ b/source/main-chunk/head.html
@@ -1,14 +1,14 @@
 <meta charset="utf-8">
+<meta name="description" content="Питомник Мейн-Кунов в Новосибирске. Первый питомник с расширенным спектром услуг">
+<meta name="keywords" content="Питомник, кошачий питомник, питомник Новосибирск">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Start Template</title>
-<meta name="description" content="Sedona">
-<meta name="keywords" content="Sedona, поиск гостиниц">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="preload" href="fonts/Roboto-Regular.woff2" as="font" crossorigin="anonymous">
+<!-- <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font" crossorigin="anonymous">
 <link rel="preload" href="fonts/Roboto-Bold.woff2" as="font" crossorigin="anonymous">
 <link rel="preload" href="fonts/Roboto-Light.woff2" as="font" crossorigin="anonymous">
-<link rel="preload" href="fonts/Roboto-Medium.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="fonts/Roboto-Medium.woff2" as="font" crossorigin="anonymous"> -->
 <link rel="stylesheet" href="css/style.min.css">
-<!-- <script src="libs/js/picturefill.js" async=""></script>
+<script src="libs/js/picturefill.js" async=""></script>
 <script>document.createElement("picture"); // Picture element HTML5 shiv</script>
 <script src="libs/js/svg4everybody.js"></script>
-<script>svg4everybody(); // run it now or whenever you are ready</script> -->
+<script>svg4everybody(); // run it now or whenever you are ready</script>
