--- a/source/parts/header.html
+++ b/source/parts/header.html
@@ -1,1 +1,21 @@
-<header class="header"></header>
+<header class="header">
+	<div class="header__container container">
+		<div class="header__wrapper">
+			<a class="header__logo logo" aria-label="Логотип питомника Мейн Кунов">
+				Логотип питомника Мейн Кунов
+			</a>
+			<ul class="header__social social">
+				<li class="social__item">
+					<a href="#" class="social__link">ВКонтакте</a>
+				</li>
+				<li class="social__item">
+					<a href="#" class="social__link">Твиттер</a>
+				</li>
+				<li class="social__item">
+					<a href="#" class="social__link">Фейсбук</a>
+				</li>
+			</ul>
+		</div>
+
+	</div>
+</header>
