--- a/source/main-chunk/head.html
+++ b/source/main-chunk/head.html
@@ -2,7 +2,7 @@
 <meta name="description" content="Питомник Мейн-Кунов в Новосибирске. Первый питомник с расширенным спектром услуг">
 <meta name="keywords" content="Питомник, кошачий питомник, питомник Новосибирск">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Start Template</title>
+<title>Питомник Мейн Кунов</title>
 <!-- <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font" crossorigin="anonymous">
 <link rel="preload" href="fonts/Roboto-Bold.woff2" as="font" crossorigin="anonymous">
 <link rel="preload" href="fonts/Roboto-Light.woff2" as="font" crossorigin="anonymous">
