--- a/source/parts/header.html
+++ b/source/parts/header.html
@@ -12,10 +12,15 @@
 					<a href="#" class="social__link">Твиттер</a>
 				</li>
 				<li class="social__item">
-					<a href="#" class="social__link"> Фейсбук</a>
+					<a href="#" class="social__link">Фейсбук</a>
 				</li>
 			</ul>
+			<div class="header__content">
+				<p class="header__city">Новосибирск</p>
+				<h1 class="header__title">Питомник Мейн-Кунов</h1>
+				<p class="header__lead">Первый питомник с расширенным спектром услуг</p>
+				<a href="#" class="header__btn">Смотреть котиков</a>
+			</div>
 		</div>
-
 	</div>
 </header>
