--- a/source/parts/footer.html
+++ b/source/parts/footer.html
@@ -2,22 +2,33 @@
 	<div class="container">
 		<div class="footer__wrapper">
 			<a class="footer__logo logo" aria-label="Логотип питомника Мейн Кунов">
-				Логотип питомника Мейн Кунов
+				<svg class="crown crown--footer" width="47" height="21">
+					<use xlink:href="#icon-crown" x="0" y="0"></use>
+				</svg>
 			</a>
 			<ul class="social footer__social">
 				<li class="social__item">
 					<a href="#" class="social__link">
 						<span class="visually-hidden">Фейсбук</span>
+						<svg class="social__icon social__icon--fb" width="7" height="15">
+							<use xlink:href="#icon-fb" x="0" y="0"></use>
+						</svg>
 					</a>
 				</li>
 				<li class="social__item">
 					<a href="#" class="social__link">
 						<span class="visually-hidden">Твиттер</span>
+						<svg class="social__icon social__icon--tw" width="21" height="14">
+							<use xlink:href="#icon-tw" x="0" y="0"></use>
+						</svg>
 					</a>
 				</li>
 				<li class="social__item">
 					<a href="#" class="social__link">
 						<span class="visually-hidden">ВКонтакте</span>
+						<svg class="social__icon social__icon--vk" width="22" height="12">
+							<use xlink:href="#icon-vk" x="0" y="0"></use>
+						</svg>
 					</a>
 				</li>
 			</ul>
