--- a/source/parts/header.html
+++ b/source/parts/header.html
@@ -2,17 +2,34 @@
 	<div class="header__container container">
 		<div class="header__wrapper">
 			<a class="header__logo logo" aria-label="Логотип питомника Мейн Кунов">
-				Логотип питомника Мейн Кунов
+				<svg class="crown crown--header" width="55" height="25">
+					<use xlink:href="#icon-crown" x="0" y="0"></use>
+				</svg>
 			</a>
-			<ul class="header__social social">
+			<ul class="social header__social">
 				<li class="social__item">
-					<a href="#" class="social__link">ВКонтакте</a>
+					<a href="#" class="social__link">
+						<span class="visually-hidden">ВКонтакте</span>
+						<svg class="social__icon social__icon--vk" width="13" height="8">
+							<use xlink:href="#icon-vk" x="0" y="0"></use>
+						</svg>
+					</a>
 				</li>
 				<li class="social__item">
-					<a href="#" class="social__link">Твиттер</a>
+					<a href="#" class="social__link">
+						<span class="visually-hidden">Твиттер</span>
+						<svg class="social__icon social__icon--tw" width="16" height="11">
+							<use xlink:href="#icon-tw" x="0" y="0"></use>
+						</svg>
+					</a>
 				</li>
 				<li class="social__item">
-					<a href="#" class="social__link">Фейсбук</a>
+					<a href="#" class="social__link">
+						<span class="visually-hidden">Фейсбук</span>
+						<svg class="social__icon social__icon--fb" width="6" height="12">
+							<use xlink:href="#icon-fb" x="0" y="0"></use>
+						</svg>
+					</a>
 				</li>
 			</ul>
 			<div class="header__content">
