--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+	<div style="display: none;">
+		<include src="build/img/sprite/sprite.svg"></include>
+	</div>
 	<include src="source/parts/header.html"></include>
 
 	<main>
@@ -25,17 +28,17 @@
 					</li>
 				</ul>
 				<div class="pets__tab-content-wrapper">
-					<div class="pets__tab-content show slider" id="pets-tab-content-1">
+					<div class="pets__tab-content pets__tab-content--show slider" id="pets-tab-content-1">
 						<div class="pets__slider slider__list slider__container">
 							<div class="gallery slider__wrapper">
 								<div class="gallery__item gallery__item--top slider__slide">
-									<!-- Тут будет изображение слайда -->
+									<img class="gallery__item-img gallery__item-img--top" src="img/pets-list-1-desktop@1x.png" width="518" height="382" alt="Мейн Кун">
 								</div>
 								<div class="gallery__item gallery__item--bottom slider__slide">
-									<!-- Тут будет изображение слайда -->
+									<img class="gallery__item-img gallery__item-img--bottom" src="img/pets-list-2-desktop@1x.png" width="518" height="241" alt="Мейн Кун">
 								</div>
 								<div class="gallery__item gallery__item--large slider__slide slider__slide--active">
-									<!-- Тут будет изображение слайда -->
+									<img class="gallery__item-img gallery__item-img--large" src="img/pets-list-3-desktop@1x.png" width="471" height="485" alt="Мейн Кун">
 								</div>
 							</div>
 						</div>
@@ -61,7 +64,7 @@
 						Мейн-Кун - это порода, которая вызывает к себе уважение. Приобретая в свой дом этого питомца, вы получите умное животное, которому нет равных
 					</p>
 					<div class="breed-features__image">
-						<!-- Тут будет изображение -->
+						<img src="img/breed-features-desktop@1x.png" width="602" height="655" alt="Изображение рыжего Мейн Куна">
 					</div>
 					<ul class="breed-features__list">
 						<li class="breed-features__item breed-features__item--cohabitation">
@@ -89,16 +92,25 @@
 					<ul class="advantages__list">
 						<li class="advantages__item">
 							<a href="#" class="advantages__link">
+								<svg class="icon-free-vet" width="99" height="107">
+									<use xlink:href="#icon-free-vet" x="0" y="0"></use>
+								</svg>
 								<span>Бесплатное ветеринарное обслуживание 5 лет</span>
 							</a>
 						</li>
 						<li class="advantages__item">
 							<a href="#" class="advantages__link">
+								<svg class="icon-counseling24" width="107" height="97">
+									<use xlink:href="#icon-counseling24" x="0" y="0"></use>
+								</svg>
 								<span>Консультирование по любому вопросу 24 часа в сутки</span>
 							</a>
 						</li>
 						<li class="advantages__item">
 							<a href="#" class="advantages__link">
+								<svg class="icon-food-selection" width="71" height="108">
+									<use xlink:href="#icon-food-selection" x="0" y="0"></use>
+								</svg>
 								<span>Индивидуальный подбор питания для вашего кота</span>
 							</a>
 						</li>
@@ -152,7 +164,7 @@
 							<div class="team__item slider__slide">
 								<div class="team__wrapper-outer">
 									<div class="team__img-wrapper">
-										<!-- Тут будет изображение -->
+										<img src="img/employee-1-desktop@1x.jpg" width="360" height="356" alt="Работник">
 									</div>
 									<div class="team__item-wrapper">
 										<blockquote>
@@ -166,16 +178,25 @@
 											<li class="social__item">
 												<a href="#" class="social__link">
 													<span class="visually-hidden">Фейсбук</span>
+													<svg class="social__icon social__icon--fb" width="7" height="15">
+														<use xlink:href="#icon-fb" x="0" y="0"></use>
+													</svg>
 												</a>
 											</li>
 											<li class="social__item">
 												<a href="#" class="social__link">
 													<span class="visually-hidden">Твиттер</span>
+													<svg class="social__icon social__icon--tw" width="21" height="14">
+														<use xlink:href="#icon-tw" x="0" y="0"></use>
+													</svg>
 												</a>
 											</li>
 											<li class="social__item">
 												<a href="#" class="social__link">
 													<span class="visually-hidden">ВКонтакте</span>
+													<svg class="social__icon social__icon--vk" width="22" height="12">
+														<use xlink:href="#icon-vk" x="0" y="0"></use>
+													</svg>
 												</a>
 											</li>
 										</ul>
@@ -247,7 +268,7 @@
 						<div class="reviews__list slider__wrapper">
 							<div class="reviews__item slider__slide">
 								<div class="reviews__img-wrapper">
-									<!-- Тут будет изображение -->
+                  <img src="img/reviewer-1-desktop@1x.jpg" width="481" height="331" alt="Комментатор">
 								</div>
 								<div class="reviews__content">
 									<blockquote>
@@ -260,11 +281,17 @@
 											<li class="social__item reviews__social-item">
 												<a href="#" class="social__link reviews__link">
 													<span class="visually-hidden">Твиттер</span>
+													<svg class="social__icon reviews__icon reviews__icon--tw" width="17" height="12">
+                            <use xlink:href="#icon-tw" x="0" y="0"></use>
+                          </svg>
 												</a>
 											</li>
 											<li class="social__item reviews__social-item">
 												<a href="#" class="social__link reviews__link">
 													<span class="visually-hidden">ВКонтакте</span>
+													<svg class="social__icon reviews__icon reviews__icon--vk" width="13" height="8">
+                            <use xlink:href="#icon-vk" x="0" y="0"></use>
+                          </svg>
 												</a>
 											</li>
 										</ul>
