--- a/source/parts/header.html
+++ b/source/parts/header.html
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="header__container container">
 		<div class="header__wrapper">
-			<a class="header__logo logo" aria-label="Логотип питомника Мейн Кунов">
+			<a class="logo header__logo" aria-label="Логотип питомника Мейн Кунов">
 				<svg class="crown crown--header" width="55" height="25">
 					<use xlink:href="#icon-crown" x="0" y="0"></use>
 				</svg>
